# w3name-rust-client

./: .envrc  .gitignore  Cargo.toml  devenv.nix  flake.nix  reproduce_bug.nu  reproduce_bug.sh  test_backward_compat.nu  test_final_fix.sh
w3name/: Cargo.toml
w3name-cli/: Cargo.toml
w3name-cli/src/: main.rs
w3name/src/: client.rs  lib.rs  name.rs  revision.rs
w3name/src/ipns/: ipns_pb.proto  mod.rs
